--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Backend"
+name = "backend"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,3 +11,4 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 interoptopus = "0.14.23"
 interoptopus_backend_csharp = "0.14.24"
+log = "0.4.21"
