--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: StandaloneWindows64
+          unityVersion: 2022.3.30f1
           allowDirtyBuild: true
         
       - name: Store saigai
@@ -81,7 +82,11 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: StandaloneOSX
+          unityVersion: 2022.3.30f1
           allowDirtyBuild: true
+
+      - name: Allow game to be executable
+        run: chmod +x "build/StandaloneOSX/Contents/MacOS/Saigai Solver"
         
       - name: Store saigai
         uses: actions/upload-artifact@v4
@@ -124,6 +129,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: StandaloneLinux64
+          unityVersion: 2022.3.30f1
           allowDirtyBuild: true
         
       - name: Store saigai
