--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
           key: Library-Windows
           restore-keys: |
             Library-
+
+      - name: Import DLL to Unity
+        run: python ./.github/workflows/store-dll.py
   
       - name: Build Unity
         uses: game-ci/unity-builder@v4
@@ -74,6 +77,9 @@ jobs:
           restore-keys: |
             Library-
 
+      - name: Import DLL to Unity
+        run: python ./.github/workflows/store-dll.py
+
       - name: Build Unity
         uses: game-ci/unity-builder@v4
         env:
@@ -84,9 +90,6 @@ jobs:
           targetPlatform: StandaloneOSX
           unityVersion: 2022.3.30f1
           allowDirtyBuild: true
-
-      - name: Allow game to be executable
-        run: chmod +x "build/StandaloneOSX/Contents/MacOS/Saigai Solver"
         
       - name: Store saigai
         uses: actions/upload-artifact@v4
@@ -120,6 +123,9 @@ jobs:
           key: Library-Linux
           restore-keys: |
             Library-
+
+      - name: Import DLL to Unity
+        run: python ./.github/workflows/store-dll.py
 
       - name: Build Unity
         uses: game-ci/unity-builder@v4
