--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,12 @@ jobs:
 
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+                    
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v4.0.0
+      
+      - name: Setup .NET Script
+        run: dotnet tool install -g dotnet-script
 
       - name: Print a message
         run: echo "Hello World!"
@@ -21,6 +27,10 @@ jobs:
       - name: Build Rust dynamic library
         run: cargo run --verbose
         working-directory: ./Rust
+
+      - name: Test library call
+        run: dotnet script TestNum.cs
+        working-directory: ./Assets/Scripts
 
       - name: Cache previous Unity builds
         uses: actions/cache@v3
