--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         working-directory: ./Rust
 
       - name: Test library call
-        run: dotnet script TestNum.cs
+        run: dotnet script NumTest.cs
         working-directory: ./Assets/Scripts
 
       - name: Cache previous Unity builds
