--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -167,3 +167,58 @@ jobs:
         with:
           name: saigai-solves-ubuntu-x64
           path: SaigaiSolves.tar
+
+  build-wasm:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Fetch repository
+        uses: actions/checkout@v4
+
+      - name: Set up Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Print a message
+        run: echo "Hello World!"
+
+      - name: Test Rust library
+        run: cargo test --verbose
+        working-directory: ./Rust
+
+      - name: Build Rust dynamic library
+        run: cargo run --verbose
+        working-directory: ./Rust
+
+      - name: Cache previous Unity builds
+        uses: actions/cache@v3
+        with:
+          path: Library
+          key: Library-WebGL
+          restore-keys: |
+            Library-
+
+      - name: Import DLL to Unity
+        run: python ./.github/workflows/store-dll.py
+
+      - name: Build Unity
+        uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          buildName: SaigaiSolves
+          targetPlatform: WebGL
+          unityVersion: 2022.3.30f1
+          allowDirtyBuild: true
+
+      - name: Tar game to retain executable permissions
+        run: tar -cvf SaigaiSolves.tar ./build/WebGL/SaigaiSolves
+        
+      - name: Upload SaigaiSolves!
+        uses: actions/upload-artifact@v4
+        with:
+          name: saigai-solves-webgl
+          path: SaigaiSolves.tar
