--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,10 @@ jobs:
       run: ls -R
 
     - name: Validate release notes
-      run: ./autocl.py ${{ inputs.version }}
+      run: .github/workflows/autocl.py ${{ inputs.version }}
 
     - name: Write release notes
-      run: echo "$(./scripts/autocl.py ${{ inputs.version }})" > ./RELEASE_NOTES.md
+      run: echo "$(.github/workflows/autocl.py ${{ inputs.version }})" > ./RELEASE_NOTES.md
 
     - name: Tag commit as version
       run: git tag ${{ inputs.version }}
