--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,10 +108,10 @@ jobs:
           allowDirtyBuild: true
 
       - name: Move game folder
-        run: sudo mv ./build/StandaloneOSX ./SaigaiSolves
+        run: sudo mv ./build/StandaloneOSX/SaigaiSolves.app ./SaigaiSolves.app
 
       - name: Tar game to retain executable permissions
-        run: tar -cvf SaigaiSolves.tar ./SaigaiSolves
+        run: tar -cvf SaigaiSolves.tar ./SaigaiSolves.app
         
       - name: Upload SaigaiSolves!
         uses: actions/upload-artifact@v4
