--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,10 @@ on:
         type: string
 
 jobs:
+  build:
+    uses: saigai-studios/saigai-solves/.github/workflows/build.yml@main
   release:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Fetch Repository
